# substrate-remote-signer-example

./: .gitmodules  Cargo.toml
example-server/: Cargo.toml
lib/: Cargo.toml
lib/src/: client.rs  lib.rs  server.rs
src/: client.rs  cryptostore.rs  lib.rs  sync_cryptostore.rs
