[package]
name = "tcp-keystore"
version = "0.1.0"
authors = ["becominginsane <francesco@zondax.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "server"
path = "bin/server.rs"
required-features = ["server"]

[features]
server = ["sc-keystore", "async-trait", "ductile", "tracing-subscriber"]
client = ["async-trait", "ductile"]
default = ["client"]

[dependencies]
sp-core = "3.0.0"
sc-keystore = { version = "3.0.0", optional = true }
sp-keystore = { version = "0.9.0", features = ["serde"] }
async-trait = { version = "0.1.47", optional = true }

tracing = "0.1"
tracing-subscriber = { version = "0.2.17", optional = true }

ductile = { version = "0.1", path = "vendor/ductile", optional = true }
serde = "1"

[patch.crates-io]
sp-core = { git = "https://github.com/Zondax/substrate", branch = "teekeystore" }
sc-keystore = { git = "https://github.com/Zondax/substrate", branch = "teekeystore" }
sp-keystore = { git = "https://github.com/Zondax/substrate", branch = "teekeystore" }
