[package]
name = "substrate-tsrss-example-server"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
publish = false
license = "GPL-3.0-or-later"
description = "This is an example application for the Too Simple Substrate Remote Signer (tssrs) JSON-RPC protocol."
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"

[dependencies]
se-remote-signer = { package = "substrate-example-tssrs", version = "0.1.0", path = "../lib", features = ["server"] }
structopt = { version = "0.3", default-features = false }
sc-cli = { version = "0.9.0" }
sc-keystore = { version = "3.0.0" }
sc-service = { version = "0.9.0" }
jsonrpc-http-server = { version = "17" }
jsonrpc-ws-server = { version = "17" }
tokio = { version = "0.2", features = ["full"] }
env_logger = "0.7.1"
