[package]
name = "substrate-example-tssrs"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
publish = false
license = "GPL-3.0-or-later"
homepage = "https://substrate.dev"
repository = "https://github.com/gnunicorn/substrate-remote-signer-example"
description = "Example implementation or remote signing through the Too Simple Substrate Remote Signer protocol over JSON-RPC"

[dependencies]
hyper = "0.13"

jsonrpc-derive = "17"
jsonrpc-core = "17"
jsonrpc-core-client = "17"
jsonrpc-client-transports = { version = "17", optional = true }
sp-core = "3.0.0"
sp-consensus-babe = { version = "0.9.0", optional = true }
sp-application-crypto = { version = "3.0.0" }
sc-keystore = { version = "3.0.0", optional = true }
sp-keystore = { version = "0.9.0" }

futures = { version = "0.3.5", features = ["compat"] }
parking_lot = "0.11"
serde = { version = "1.0.115", features = ["derive"] }
async-trait = { version = "0.1", optional = true }
log = "0.4.11"
tokio = { version = "0.2", optional = true, features = ["rt-core"] }
url = { version = "1.7", optional = true }

[dev-dependencies]
jsonrpc-test = "14.2.0"
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0.57"

[features]
server = [
    "sp-consensus-babe",
    "sc-keystore",
]
client = [
    "async-trait",
    "tokio",
    "jsonrpc-client-transports",
    "url",
]
